@@ -28,8 +28,8 @@
         <rect>
             <x>0</x>
             <y>0</y>
-            <width>556</width>
-            <height>345</height>
+            <width>570</width>
+            <height>361</height>
         </rect>
     </property>
     <property name="sizePolicy">
@@ -100,7 +100,7 @@
                 </property>
                 <widget class="QLayoutWidget">
                     <property name="name">
-                        <cstring>layout4</cstring>
+                        <cstring>layout2</cstring>
                     </property>
                     <grid>
                         <property name="name">
@@ -181,21 +181,13 @@
                 </widget>
                 <widget class="QLayoutWidget">
                     <property name="name">
-                        <cstring>layout5</cstring>
+                        <cstring>layout3</cstring>
                     </property>
-                    <vbox>
+                    <grid>
                         <property name="name">
                             <cstring>unnamed</cstring>
                         </property>
-                        <widget class="QComboBox">
-                            <property name="name">
-                                <cstring>DevicePortComboBox</cstring>
-                            </property>
-                            <property name="toolTip" stdset="0">
-                                <string>Device port/channel</string>
-                            </property>
-                        </widget>
-                        <widget class="qsamplerDeviceParamTable">
+                        <widget class="qsamplerDeviceParamTable" row="1" column="0" rowspan="1" colspan="2">
                             <property name="name">
                                 <cstring>DevicePortParamTable</cstring>
                             </property>
@@ -220,13 +212,43 @@
                                 <string>Device port/channel parameters</string>
                             </property>
                         </widget>
-                    </vbox>
+                        <widget class="QLabel" row="0" column="0">
+                            <property name="name">
+                                <cstring>DevicePortTextLabel</cstring>
+                            </property>
+                            <property name="text">
+                                <string>Channel:</string>
+                            </property>
+                            <property name="alignment">
+                                <set>AlignVCenter|AlignRight</set>
+                            </property>
+                            <property name="buddy" stdset="0">
+                                <cstring>DevicePortComboBox</cstring>
+                            </property>
+                        </widget>
+                        <widget class="QComboBox" row="0" column="1">
+                            <property name="name">
+                                <cstring>DevicePortComboBox</cstring>
+                            </property>
+                            <property name="sizePolicy">
+                                <sizepolicy>
+                                    <hsizetype>7</hsizetype>
+                                    <vsizetype>0</vsizetype>
+                                    <horstretch>0</horstretch>
+                                    <verstretch>0</verstretch>
+                                </sizepolicy>
+                            </property>
+                            <property name="toolTip" stdset="0">
+                                <string>Device port/channel</string>
+                            </property>
+                        </widget>
+                    </grid>
                 </widget>
             </widget>
         </widget>
         <widget class="QLayoutWidget">
             <property name="name">
-                <cstring>layout6</cstring>
+                <cstring>layout1</cstring>
             </property>
             <hbox>
                 <property name="name">
@@ -419,12 +441,12 @@
     <variable access="private">int m_iDirtyCount;</variable>
     <variable access="private">bool m_bNewDevice;</variable>
     <variable access="private">qsamplerDevice::qsamplerDeviceType m_deviceType;</variable>
-	<variable access="private">qsamplerDevice::qsamplerDeviceType m_deviceTypeMode;</variable>
+    <variable access="private">qsamplerDevice::qsamplerDeviceType m_deviceTypeMode;</variable>
     <variable access="private">qsamplerDeviceItem *m_pAudioItems;</variable>
     <variable access="private">qsamplerDeviceItem *m_pMidiItems;</variable>
 </variables>
 <signals>
-	<signal>devicesChanged()</signal>
+    <signal>devicesChanged()</signal>
 </signals>
 <slots>
     <slot specifier="non virtual">createDevice()</slot>
@@ -445,14 +467,10 @@
     <function access="private" specifier="non virtual">hideEvent( QHideEvent * pHideEvent )</function>
     <function specifier="non virtual">setMainForm( qsamplerMainForm *pMainForm )</function>
     <function specifier="non virtual">setDeviceTypeMode( qsamplerDevice::qsamplerDeviceType deviceType )</function>
+    <function specifier="non virtual">setClient( lscp_client_t *pClient )</function>
     <function specifier="non virtual">setDriverName( const QString &amp; sDriverName )</function>
     <function specifier="non virtual">setDevice( qsamplerDevice *pDevice )</function>
-    <function specifier="non virtual">setClient( lscp_client_t *pClient )</function>
 </functions>
 <pixmapinproject/>
 <layoutdefaults spacing="4" margin="4"/>
-<includehints>
-    <includehint>qsamplerdeviceparamtable.h</includehint>
-    <includehint>qsamplerdeviceparamtable.h</includehint>
-</includehints>
 </UI>
